--- a/css/style.css
+++ b/css/style.css
@@ -11,27 +11,10 @@ a {
     text-decoration: none;
 }
 
-/*Consider using this orange - #FF9A00 for some standout pieces*/
-
-/*COLOURS 1*/
 /*
-.header-container, .logo-container, .menu-dropdown, option, .tip-container, .back-to-top-middle-area{
-    background-color: #595959;
-}
-
-.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button  {
-    background-color: #404040;
-}
-
-.menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line, .event-category{    
-    background-color: #808080;
-}
-
-.event-map-container,.event-description-container, .event-btn {
+.event-map-container,.event-description-container, .event-btn, .event-photo-container {
     background-color: #FFF;
-}
-*/
-/*COLOURS 2*/
+}*/
 
 .header-container, .logo-container, .menu-dropdown, .tip-container, .back-to-top-middle-area{
     background-color:#393E46;
@@ -44,10 +27,9 @@ a {
 .menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line {    
     background-color: #00ADB5;
 }
-
-/*White #### FIND HEXA COLOR FOR THIS*/ 
+ 
 option, .search-criteria {
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
 }
 
 /*HEADER CSS*/
@@ -424,7 +406,8 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 .event-photo-container, .event-map-container, .event-description-container {
     border-width: 1%;
     border-style: solid;
-    border-color: rgba(50,50,50,0.2);
+    border-color: #00ADB5;
+    /*border-color: rgba(50,50,50,0.2);*/
 }
 
 
@@ -788,7 +771,7 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 .table-info-container {
     width: 800px;
     height: 35px;
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     margin: 10px 100px;
     border: 2px solid #393E46;
 }
